# arc-limon-icon-theme

./: Makefile.am  README.md  configure.ac
ArcLimon/: index.theme
TUXEDO-One/: index.theme
TUXEDOOne/: index.theme
src/: index.theme  render_icons.sh
