AC_INIT(
    [tuxedo-icons-theme-one],
    [20160605],
    [https://github.com/tuxedocomputers/tuxedo-icons-theme-one/issues],
    [arc-icon-theme],
    [https://github.com/horst3180/arc-limon-icon-theme]
)

AM_INIT_AUTOMAKE([no-dist-gzip dist-xz foreign])
AC_PREFIX_DEFAULT(/usr/local)

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
